--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -46,7 +46,7 @@ $task-scheduled: #70C3FC;
 
     .info {
             position: absolute;
-            bottom: 1.0rem;
+            top: 2.5rem;
             width: 95%;
     }
 
@@ -63,7 +63,7 @@ $task-scheduled: #70C3FC;
             padding: 0.25rem 0 0.25rem 0.5rem;
             margin: 0 0 0.1rem 0;
             text-align: left;
-            font-size: 0.6rem;
+            font-size: 1rem;
             color: black;
             font-family: "Muli";
             font-weight: 400;
