--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -46,7 +46,7 @@ $task-scheduled: #70C3FC;
 
     .info {
             position: absolute;
-            top: 2.5rem;
+            //top: 2.5rem;
             width: 95%;
     }
 
@@ -58,9 +58,8 @@ $task-scheduled: #70C3FC;
         h3 {
             display: inline-block;
             width: 100%;
-            max-height: 1.5rem;
             white-space: nowrap;
-            padding: 0.25rem 0 0.25rem 0.5rem;
+            padding: 0 0 0 0.5rem;
             margin: 0 0 0.1rem 0;
             text-align: left;
             font-size: 1rem;
@@ -179,7 +178,7 @@ $task-scheduled: #70C3FC;
                     border-bottom-left-radius: 4px;
                 }
 
-                &:nth-child(4) {
+                &:nth-child(3) {
                     border-right: 1px solid #AAA;
                     border-top-right-radius: 4px;
                     border-bottom-right-radius: 4px;
@@ -313,12 +312,12 @@ $task-scheduled: #70C3FC;
             li {
                 position: relative;
                 display: inline-block;
-                height: 4rem;
+                height: 1.2rem;
                 box-sizing: border-box;
                 border-right: 1px dotted #ddd;
                 width: 13.14%;
                 overflow: hidden;
-                padding: 0.5rem 0;
+                padding: 0.05rem 0;
 
                 &:last-child {
                     border-right: none;
@@ -575,86 +574,6 @@ $task-scheduled: #70C3FC;
         }
 
     }
-
-    .year-view {
-        border-top: 1px solid #c4c4c4;
-        padding: 1rem 0;
-        display: flex;
-        flex-wrap: wrap;
-
-        .year-month {
-
-            margin: 1rem 0.75rem;
-            border: 1px solid #eee;
-            padding: 0.5rem 0;
-
-            h4 {
-                text-align: center;
-                color: #777;
-            }
-
-            ul {
-                display: flex;
-                list-style: none;
-                margin-left: 0;
-                margin-bottom: 0.25rem;
-                align-items: center;
-                justify-content: space-between;
-
-                li {
-                    text-align: center;
-                    padding: 0.25rem 0.5rem;
-                    min-width: 11%;
-                    font-size: 0.75rem;
-                    color: #777;
-                    margin: 0.25rem;
-                    cursor: pointer;
-
-                    &.task {
-                        color: white;
-                        background-color: $task;
-                        border-radius: 4px;
-                    }
-
-                    &.occasion {
-                        color: white;
-                        background-color: $occasion;
-                        border-radius: 4px;
-                    }
-
-                    &.help {
-                        color: white;
-                        background-color: $task-help;
-                        border-radius: 4px;
-                    }
-
-                    &.other-month {
-                        color: white;
-                        background-color: white;
-                        border-radius: 4px;
-                    }
-
-                    &.filtered {
-                        background-color: white;
-                        color: #777;
-                    }
-
-
-                }
-
-                &.day-header {
-                    background-color: #eee;
-                    border-bottom: 1px solid #c4c4c4;
-                    border-top: 1px solid #c4c4c4;
-                }
-
-
-            }
-
-
-        }
-    }
-    
 }
 
 
