--- a/app/sass/week.css
+++ b/app/sass/week.css
@@ -2,13 +2,13 @@
 .display__view {
 }
 
-.week__times__row {
+.week__times__column {
 }
 
 .week__days {
 }
 
-.week_times_row_item {
+.week__times__column__item {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
     background:#e6e6e6;
     border-radius:3px;
