--- a/app/sass/week.css
+++ b/app/sass/week.css
@@ -2,30 +2,69 @@
 .display__view {
 }
 
-.week__times__column {
+
+.week__day:last-child .week__day__items__name__value{
+    border-top-right-radius:3px;
 }
 
-.week__days {
+.week__day:last-child  .week__day__items__slot:last-child {
+    border-bottom-right-radius:3px;
 }
 
-.week__times__column__item {
+.times__column {
+}
+
+.times__column__spacer__item {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
     background:#e6e6e6;
-    border-radius:3px;
-    border:1px solid #b1b0b1;
+    border-top-left-radius:3px;
+    border-top:1px solid #b1b0b1;
+    border-left:1px solid #b1b0b1;
+    border-right:2px solid #b1b0b1;
+    border-bottom:2px solid #b1b0b1;
     color: #555555;
+    text-align: center;
+    font-size: 14px;
 }
-
-.week__day__name__item {
+.times__column__item {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
     background:#e6e6e6;
-    border-radius:3px;
-    border:1px solid #b1b0b1;
+    border-left:1px solid #b1b0b1;
+    border-right:2px solid #b1b0b1;
+    border-bottom:1px solid #b1b0b1;
     color: #555555;
+    text-align: center;
+    height:20px;
+    font-size: 14px;
+    font-weight: bold;
 }
 
-.week__day__time__slot {
-    box-shadow:inset 0px 0px 14px -3px #f2fadc;
-    border:1px solid #b1b0b1;
-    color: #555555;
+.times__column__item:last-child {
+    border-bottom-left-radius:3px;
 }
+
+.week__day__items__name__value {
+    box-shadow:inset 0px 0px 14px -3px #f2fadc;
+    background:#e6e6e6;
+    border-top:1px solid #b1b0b1;
+    border-left:1px solid #b1b0b1;
+    border-right:1px solid #b1b0b1;
+    border-bottom:2px solid #b1b0b1;
+    color: #555555;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.week__day__items__slot {
+    box-shadow:inset 0px 0px 14px -3px #f2fadc;
+    border-bottom:1px solid #b1b0b1;
+    border-right:1px solid #b1b0b1;
+    color: #555555;
+    height:20px;
+}
+
+.week__hour__breaks {
+    border-top:1px solid #b1b0b1;
+}
+
