--- a/app/sass/index.css
+++ b/app/sass/index.css
@@ -1,5 +1,8 @@
 @import './normalize.css';
 @import './structural.css';
+@import './calendar.css';
 @import './header.css';
+@import './month.css';
 @import './week.css';
 @import './day.css';
+@import './task.css';
