--- a/app/sass/index.css
+++ b/app/sass/index.css
@@ -2,6 +2,7 @@
 @import './structural.css';
 @import './calendar.css';
 @import './header.css';
+@import './times.css';
 @import './month.css';
 @import './week.css';
 @import './day.css';
