--- a/app/sass/task.css
+++ b/app/sass/task.css
@@ -1,9 +1,16 @@
 
 .task__item {
-    border-radius: 3px;
+    margin: 1px;
 }
 
 .month__task__item {
+    margin: 1px;
+}
+
+.month__task__item__title {
+    font-size: 10px;
+    color: white;
+    padding:3px;
     border-radius: 3px;
 }
 
@@ -11,4 +18,15 @@
     font-size: 10px;
     color: white;
     padding:3px;
+    border-top-left-radius: 3px;
+    border-top-left-right-radius: 3px;
+
+}
+
+.task__item__title {
+    font-size: 10px;
+    color: white;
+    padding:3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-left-right-radius: 3px;
 }
