--- a/app/sass/day.css
+++ b/app/sass/day.css
@@ -6,10 +6,7 @@
 .day__items__name__value {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
     background:#e6e6e6;
-    border-top:1px solid #b1b0b1;
-    border-left:1px solid #b1b0b1;
-    border-right:1px solid #b1b0b1;
-    border-bottom:2px solid #b1b0b1;
+    @mixin border;
     border-top-right-radius:3px;
     color: #555555;
     text-align: center;
@@ -19,14 +16,14 @@
 
 .day__items__slot {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
-    border-bottom:1px solid #b1b0b1;
-    border-right:1px solid #b1b0b1;
+    border-bottom:$border;
+    border-right:$border;
     color: #555555;
     height:20px;
 }
 
 .hour__breaks {
-    border-top:1px solid #b1b0b1;
+    border-top:$border;
 }
 
 .day__isToday {
