--- a/app/sass/index.css
+++ b/app/sass/index.css
@@ -1,4 +1,5 @@
 @import './normalize.css';
+@import './variables.css';
 @import './structural.css';
 @import './calendar.css';
 @import './header.css';
