--- a/app/sass/month.css
+++ b/app/sass/month.css
@@ -1,11 +1,6 @@
 .month__day {
     font-size:12px;
-    border:1px solid #b1b0b1;
-}
-
-.month__day__number {
-    align-self:flex-end;
-    padding: 3px;
+    border:$border;
 }
 
 .month__day__otherMonth  .month__day__number {
@@ -19,10 +14,7 @@
 .month__day__header {
     box-shadow: inset 0px 0px 14px -3px #f2fadc;
     background: #e6e6e6;
-    border-top: 1px solid #b1b0b1;
-    border-left: 1px solid #b1b0b1;
-    border-right: 1px solid #b1b0b1;
-    border-bottom: 2px solid #b1b0b1;
+    @mixin border;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
     color: #555555;
@@ -32,7 +24,7 @@
 }
 
 .month__day__header_item {
-    border-right: 1px solid #b1b0b1;
+    border-right: $border;
     width:100%;
 }
 
