--- a/app/sass/times.css
+++ b/app/sass/times.css
@@ -6,10 +6,10 @@
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
     background:#e6e6e6;
     border-top-left-radius:3px;
-    border-top:1px solid #b1b0b1;
-    border-left:1px solid #b1b0b1;
-    border-right:2px solid #b1b0b1;
-    border-bottom:2px solid #b1b0b1;
+    border-top:$border;
+    border-left:$border;
+    border-right:$border__thick;
+    border-bottom:$border__thick;
     color: #555555;
     text-align: center;
     font-size: 14px;
@@ -17,9 +17,9 @@
 .times__column__item {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
     background:#e6e6e6;
-    border-left:1px solid #b1b0b1;
-    border-right:2px solid #b1b0b1;
-    border-bottom:1px solid #b1b0b1;
+    border-left:$border;
+    border-right:$border__thick;
+    border-bottom:$border;
     color: #555555;
     text-align: center;
     height:20px;
