--- a/app/sass/week.css
+++ b/app/sass/week.css
@@ -10,10 +10,7 @@
 .week__day__items__name__value {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
     background:#e6e6e6;
-    border-top:1px solid #b1b0b1;
-    border-left:1px solid #b1b0b1;
-    border-right:1px solid #b1b0b1;
-    border-bottom:2px solid #b1b0b1;
+    @mixin border;
     color: #555555;
     text-align: center;
     font-size: 14px;
@@ -22,14 +19,14 @@
 
 .week__day__items__slot {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
-    border-bottom:1px solid #b1b0b1;
-    border-right:1px solid #b1b0b1;
+    border-bottom: $border;
+    border-right: $border;
     color: #555555;
     height:20px;
 }
 
 .week__hour__breaks {
-    border-top:1px solid #b1b0b1;
+    border-top: $border;
 }
 
 .week__day__isToday {
