--- a/app/css/day.css
+++ b/app/css/day.css
@@ -5,7 +5,7 @@
 
 .day__items__name__value {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
-    background:#e6e6e6;
+    background:$gradient;
     @mixin border;
     border-top-right-radius:3px;
     color: #555555;
