--- a/app/css/task.css
+++ b/app/css/task.css
@@ -1,10 +1,12 @@
 
 .task__item {
     margin: 1px;
+    border-radius: 3px;
 }
 
 .month__task__item {
     margin: 1px;
+    border-radius: 3px;
 }
 
 .month__task__item__title {
@@ -19,7 +21,7 @@
     color: white;
     padding:3px;
     border-top-left-radius: 3px;
-    border-top-left-right-radius: 3px;
+    border-top-right-radius: 3px;
 
 }
 
@@ -27,6 +29,6 @@
     font-size: 10px;
     color: white;
     padding:3px;
-    border-bottom-left-radius: 3px;
-    border-bottom-left-right-radius: 3px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 }
