--- a/app/css/variables.css
+++ b/app/css/variables.css
@@ -1,6 +1,8 @@
-$borderColor: #b1b0b1;
+$borderColor: #d1d1d1;
 $border: 1px solid $borderColor;
 $border__thick: 2px solid $borderColor;
+$gradient: linear-gradient(to top, #d6d6d6 0%, #cfcfcf 0%, #d9d9d9 30%, #f0f0f0 100%);
+$gradient__darker: linear-gradient(to top, #c2c2c2 0%, #bababa 0%, #c3c3c3 30%, #d9d9d9 100%);
 
 @define-mixin border {
     border-top:1px solid $borderColor;
