--- a/app/css/week.css
+++ b/app/css/week.css
@@ -9,7 +9,7 @@
 
 .week__day__items__name__value {
     box-shadow:inset 0px 0px 14px -3px #f2fadc;
-    background:#e6e6e6;
+    background:$gradient;
     @mixin border;
     color: #555555;
     text-align: center;
