--- a/app/css/task.css
+++ b/app/css/task.css
@@ -20,9 +20,9 @@
     font-size: 10px;
     color: white;
     padding:3px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    height: 100%;
 }
 
 .task__item__title {
