more tweaks for consumption

--- a/lib/redux-task-calendar.css
+++ b/lib/redux-task-calendar.css
@@ -481,9 +481,7 @@ ol {
     -ms-flex-flow: column nowrap;
         flex-flow: column nowrap
 }
-.redux__task__calendar__calendar {
-    margin: 30px
-}
+.redux__task__calendar__calendar {}
 .redux__task__calendar__header {
     height: 28px;
     margin-top: 10px
